# api

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.cs.md  README.github.md  README.md  pom.xml
.claude/: settings.json
.claude/commands/: role.md
.claude/roles/: architect.md  developer.md  techlead.md  tester.md  (+1 more)
api/: pom.xml
contract/: README.md
go/: go.mod
java/: checkstyle.xml  pom.xml
persistance/: pom.xml
persistence/: pom.xml
python/: pyproject.toml
python/src/cassandragargoyle/api/fuzzy/: __init__.py  levenshtein.py
python/src/cassandragargoyle/api/log/: __init__.py  factory.py  logging_config.py
python/src/cassandragargoyle/api/telemetry/: __init__.py  exporter_type.py  provider.py
python/tests/: test_log.py  test_telemetry_provider.py
python/tests/fuzzy/: test_levenshtein.py
scripts/: github_00_setup.py  github_01_preflight_check.py  github_02_quick_publish.py  github_02_sync_publish.py  github_config.py  github_publish.json  setup-venv.sh  switch-to-role-architect.bat  switch-to-role-architect.sh  switch-to-role-decision-maker.bat  switch-to-role-developer.bat  switch-to-role-developer.sh  switch-to-role-product-owner.bat  switch-to-role-techlead.bat  switch-to-role-tester-linux.bat  switch-to-role-tester-windows.bat  switch-to-role-tester.bat  switch-to-role-tester.sh  switch-to-role-user.bat  switch-to-role-user.sh  validate-contracts.mjs
typescript/: eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
(+235 files in other folders)
